--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,21 +10,21 @@ spring:
         password: nacos
         username: nacos
     gateway:
-      routes:
-        # \u57FA\u4E8E\u6CE8\u518C\u4E2D\u5FC3\u7684\u8DEF\u7531\u7B56\u7565
-        - id: login-server
-          # \u57FA\u4E8Elb\u8D1F\u8F7D\u5747\u8861\u5F62\u5F0F\u8F6C\u53D1\uFF0C\u540E\u9762\u5730\u5740\u4E3A\u6CE8\u518C\u4E2D\u5FC3\u7684\u670D\u52A1\u540D\u79F0
-          uri: lb://login-server
-          # \u5339\u914D\u89C4\u5219
-          predicates:
-            - Path=/login/**
-          filters:
-            # \u8F6C\u53D1\u8BF7\u6C42\u65F6\u53BB\u63891\u7EA7\u524D\u7F00\uFF0Ceg\uFF1Ahttp://localhost:9999/login/test?token=111\u4E2D\u95F4\u7684member\u5B57\u6BB5\u4F1A\u88AB\u6E05\u6389
-            - StripPrefix=1
       discovery:
-        # \u8DEF\u7531\u8BBF\u95EE\u65B9\u5F0F\uFF1Ahttp://Gateway_HOST:Gateway_PORT/\u5927\u5199\u7684serviceId/**\uFF0C\u5176\u4E2D\u5FAE\u670D\u52A1\u5E94\u7528\u540D\u9ED8\u8BA4\u5927\u5199\u8BBF\u95EE
         locator:
-          # \u662F\u5426\u4E0E\u670D\u52A1\u53D1\u73B0\u7EC4\u4EF6\u8FDB\u884C\u7ED3\u5408\uFF0C\u901A\u8FC7 serviceId(\u5FC5\u987B\u8BBE\u7F6E\u6210\u5927\u5199) \u8F6C\u53D1\u5230\u5177\u4F53\u7684\u670D\u52A1\u5B9E\u4F8B\u3002\u9ED8\u8BA4\u4E3Afalse\uFF0C\u8BBE\u4E3Atrue\u4FBF\u5F00\u542F\u901A\u8FC7\u670D\u52A1\u4E2D\u5FC3\u7684\u81EA\u52A8\u6839\u636E serviceId \u521B\u5EFA\u8DEF\u7531\u7684\u529F\u80FD\u3002
-          enabled: true
-          # \u5141\u8BB8\u901A\u8FC7\u6A21\u5757\u540D\u5C0F\u5199\u4EE3\u7406
+          enabled: true #开启服务发现
           lower-case-service-id: true
+      routes:
+        - id: baidu
+          predicates:   #断言
+            - Path=/baidu  #匹配规则
+          filters:
+            - StripPrefix=1
+          uri: http://www.baidu.com  #跳转地址：http://192.168.211.1:8900/baidu转到百度
+        - id: bilibili
+          predicates:
+            - Path=/bilibili
+          filters:
+            - StripPrefix=1
+          uri: https://space.bilibili.com/215563138
+
