--- a/testdatasource/src/main/resources/application.yml
+++ b/testdatasource/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
     context-path: /
 
 spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.211.132:8848
+        password: nacos
+        username: nacos
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.211.132:3306/rongdan?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
