--- a/testdatasource/src/main/resources/application.yml
+++ b/testdatasource/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 server:
   port: 8081
-  servlet:
-    context-path: /
-
 spring:
+  application:
+    name: test-server
   cloud:
     nacos:
       discovery:
