添加加解密

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -27,10 +27,10 @@ spring:
           filters:
             - StripPrefix=1
           uri: https://space.bilibili.com/215563138
-          #uri: http://192.168.211.1:8081/rd-request/getUser?id=911592303011950590
         - id: test-server1
           predicates:
             #- Path=/request-api/request/**
+            #gateway跳转路径：http://192.168.211.1:8900/test-server/test/request/getUser?id=911592303011950590
             - Path=/test/**
           filters:
             - StripPrefix=2
