springboot--->发布确认退回

--- a/springboot-rabbitmq/src/main/resources/application.yml
+++ b/springboot-rabbitmq/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     port: 5672
     username: admin
     password: 123
+    #开启发布确认
+    publisher-confirm-type: correlated
+    # 消息回退
+    publisher-returns: true
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
